select button css fixes and overflow:hidden added

--- a/css/map.css
+++ b/css/map.css
@@ -4,6 +4,7 @@
 		}
 		html, body, #map {
 			height: 100%;
+			overflow: hidden;
 		}
 		
 		#map {
@@ -99,6 +100,14 @@
 		#moreinfo {
 			display: none;
 		}
+
+		.buttoncontainer {
+			     position:relative;
+	        margin-bottom:0px;
+	        top:65px;
+	        margin-right: 30px;
+	        z-index:2000;
+		}
 		
 	    .controlButton {
 
@@ -131,6 +140,7 @@
 	        text-decoration:none;
 
 	        text-shadow:0px 1px 0px #854629;
+	   
 
 	    }
 	    .controlButton:hover {
